--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: monospace, Space Mono;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -423,10 +423,11 @@ video {
 }
 
 html {
-  font-family: "Space Grotesk", sans-serif, "Space Mono", monospace;
-  :focus-visible {
-    outline: none;
-  }
+  font-family: "Space Grotesk", "Space Mono", sans-serif, monospace;
+}
+
+*:focus-visible {
+  outline: none;
 }
 
 a:hover,
@@ -536,11 +537,17 @@ a:hover,
 
 .container {
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 24px;
+  padding-left: 24px;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 400px) {
   .container {
-    max-width: 640px;
+    max-width: 400px;
+    padding-right: 24px;
+    padding-left: 24px;
   }
 }
 
@@ -553,18 +560,24 @@ a:hover,
 @media (min-width: 1024px) {
   .container {
     max-width: 1024px;
+    padding-right: 0;
+    padding-left: 0;
   }
 }
 
 @media (min-width: 1280px) {
   .container {
     max-width: 1280px;
+    padding-right: 0;
+    padding-left: 0;
   }
 }
 
-@media (min-width: 1536px) {
+@media (min-width: 1440px) {
   .container {
-    max-width: 1536px;
+    max-width: 1440px;
+    padding-right: 0;
+    padding-left: 0;
   }
 }
 
@@ -643,8 +656,16 @@ a:hover,
   left: 0.75rem;
 }
 
+.left-6 {
+  left: 1.5rem;
+}
+
 .top-3 {
   top: 0.75rem;
+}
+
+.top-\[48px\] {
+  top: 48px;
 }
 
 .isolate {
@@ -653,10 +674,6 @@ a:hover,
 
 .isolation-auto {
   isolation: auto;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
 }
 
 .float-right {
@@ -687,11 +704,6 @@ a:hover,
   clear: none;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -702,10 +714,6 @@ a:hover,
 
 .ml-1\.5 {
   margin-left: 0.375rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
 }
 
 .ml-auto {
@@ -722,10 +730,6 @@ a:hover,
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
 }
 
 .box-border {
@@ -827,28 +831,45 @@ a:hover,
   display: none;
 }
 
-.h-\[34px\] {
-  height: 34px;
-}
-
-.h-\[43px\] {
-  height: 43px;
-}
-
-.h-\[402px\] {
-  height: 402px;
-}
-
-.h-\[300px\] {
-  height: 300px;
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-\[24px\] {
   height: 24px;
 }
 
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-\[34px\] {
+  height: 34px;
+}
+
+.h-\[402px\] {
+  height: 402px;
+}
+
 .h-\[42px\] {
   height: 42px;
+}
+
+.h-\[43px\] {
+  height: 43px;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.w-\[47px\] {
+  width: 47px;
+}
+
+.w-\[85\%\] {
+  width: 85%;
 }
 
 .w-auto {
@@ -857,10 +878,6 @@ a:hover,
 
 .w-full {
   width: 100%;
-}
-
-.w-\[47px\] {
-  width: 47px;
 }
 
 .max-w-\[342px\] {
@@ -1199,14 +1216,6 @@ a:hover,
   grid-auto-flow: column dense;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -1395,13 +1404,16 @@ a:hover,
   gap: 3rem;
 }
 
-.gap-x-12 {
-  -moz-column-gap: 3rem;
-       column-gap: 3rem;
+.gap-3 {
+  gap: 0.75rem;
 }
 
-.gap-y-12 {
-  row-gap: 3rem;
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -2013,6 +2025,10 @@ a:hover,
   padding: 3rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -2025,28 +2041,9 @@ a:hover,
   padding: 1.5rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-\[25px\] {
-  padding-top: 25px;
-  padding-bottom: 25px;
 }
 
 .py-3 {
@@ -2059,20 +2056,18 @@ a:hover,
   padding-bottom: 1rem;
 }
 
-.pb-0 {
-  padding-bottom: 0px;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-\[25px\] {
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .pb-20 {
   padding-bottom: 5rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
 }
 
 .pb-\[25px\] {
@@ -2081,10 +2076,6 @@ a:hover,
 
 .pl-3 {
   padding-left: 0.75rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
 }
 
 .pt-6 {
@@ -2149,6 +2140,10 @@ a:hover,
 
 .align-super {
   vertical-align: super;
+}
+
+.font-mono {
+  font-family: monospace, Space Mono;
 }
 
 .text-base {
@@ -2260,14 +2255,14 @@ a:hover,
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-lightSand {
   --tw-text-opacity: 1;
   color: rgb(252 247 230 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2587,14 +2582,20 @@ a:hover,
   content: var(--tw-content);
 }
 
-@media (min-width: 640px) {
+@media (min-width: 400px) {
   .sm\:container {
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 24px;
+    padding-left: 24px;
   }
 
-  @media (min-width: 640px) {
+  @media (min-width: 400px) {
     .sm\:container {
-      max-width: 640px;
+      max-width: 400px;
+      padding-right: 24px;
+      padding-left: 24px;
     }
   }
 
@@ -2607,20 +2608,36 @@ a:hover,
   @media (min-width: 1024px) {
     .sm\:container {
       max-width: 1024px;
+      padding-right: 0;
+      padding-left: 0;
     }
   }
 
   @media (min-width: 1280px) {
     .sm\:container {
       max-width: 1280px;
+      padding-right: 0;
+      padding-left: 0;
     }
   }
 
-  @media (min-width: 1536px) {
+  @media (min-width: 1440px) {
     .sm\:container {
-      max-width: 1536px;
+      max-width: 1440px;
+      padding-right: 0;
+      padding-left: 0;
     }
   }
+}
+
+.placeholder\:text-black::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-black::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .hover\:bg-orangeHover:hover {
@@ -2667,9 +2684,197 @@ a:hover,
   text-align: center;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 400px) {
+  .sm\:w-\[342px\] {
+    width: 342px;
+  }
+
   .sm\:underline {
     text-decoration-line: underline;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:mr-\[123px\] {
+    margin-right: 123px;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:h-\[82px\] {
+    height: 82px;
+  }
+
+  .md\:w-\[82px\] {
+    width: 82px;
+  }
+
+  .md\:w-\[93\%\] {
+    width: 93%;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:max-w-\[300px\] {
+    max-width: 300px;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:flex-row-reverse {
+    flex-direction: row-reverse;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
+  .md\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .md\:px-\[120px\] {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+
+  .md\:py-\[84px\] {
+    padding-top: 84px;
+    padding-bottom: 84px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:left-\[152px\] {
+    left: 152px;
+  }
+
+  .lg\:mb-\[19px\] {
+    margin-bottom: 19px;
+  }
+
+  .lg\:inline {
+    display: inline;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-\[38px\] {
+    height: 38px;
+  }
+
+  .lg\:h-\[45px\] {
+    height: 45px;
+  }
+
+  .lg\:h-\[98px\] {
+    height: 98px;
+  }
+
+  .lg\:h-auto {
+    height: auto;
+  }
+
+  .lg\:w-\[193px\] {
+    width: 193px;
+  }
+
+  .lg\:w-\[45px\] {
+    width: 45px;
+  }
+
+  .lg\:w-\[518px\] {
+    width: 518px;
+  }
+
+  .lg\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:gap-12 {
+    gap: 3rem;
+  }
+
+  .lg\:space-x-12 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(3rem * var(--tw-space-x-reverse));
+    margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-3 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .lg\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .lg\:pb-6 {
+    padding-bottom: 1.5rem;
+  }
+
+  .lg\:pl-\[62px\] {
+    padding-left: 62px;
+  }
+
+  .lg\:pr-\[120px\] {
+    padding-right: 120px;
+  }
+
+  .lg\:pt-6 {
+    padding-top: 1.5rem;
+  }
+
+  .lg\:pt-\[100px\] {
+    padding-top: 100px;
+  }
+
+  .lg\:text-xl {
+    font-size: 20px;
+    line-height: 26px;
   }
 }
 
