--- a/css/styles.css
+++ b/css/styles.css
@@ -851,6 +851,10 @@ a:hover,
   height: 402px;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-\[42px\] {
   height: 42px;
 }
@@ -862,6 +866,10 @@ a:hover,
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.w-\[40px\] {
+  width: 40px;
 }
 
 .w-\[47px\] {
@@ -1408,6 +1416,10 @@ a:hover,
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
@@ -1750,6 +1762,10 @@ a:hover,
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-b {
@@ -2649,7 +2665,7 @@ a:hover,
   font-weight: 700;
 }
 
-.hover\:shadow-outline:hover {
+.hover\:shadow-ligthOrange:hover {
   --tw-shadow: 0px 0px 10px 4px rgba(237,94,33,0.5);
   --tw-shadow-colored: 0px 0px 10px 4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2670,7 +2686,7 @@ a:hover,
   background-color: rgb(216 74 14 / var(--tw-bg-opacity));
 }
 
-.focus\:shadow-outline:focus {
+.focus\:shadow-ligthOrange:focus {
   --tw-shadow: 0px 0px 10px 4px rgba(237,94,33,0.5);
   --tw-shadow-colored: 0px 0px 10px 4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
